...
                        BorderStroke(3.dp, my_gold), shape = RoundedCornerShape(16.dp)
                    )
                    .clip(RoundedCornerShape(16.dp))
                    .clickable {
                        onNavigateToSelezionaServizioBarba()
                    }
                    .testTag("Home"),
                colorFilter = ColorFilter.colorMatrix(ColorMatrix().apply { setToSaturation(0f) })
            )
            Text(text = "BARBA", color = my_white, fontSize = 40.sp,
                fontFamily = myFont,
                modifier = Modifier
                    .wrapContentSize()
...
